[gd_scene load_steps=3 format=3 uid="uid://5xr4b3mixona"]

[ext_resource type="Script" path="res://Scenes/levels.gd" id="1_c4j2x"]
[ext_resource type="Texture2D" uid="uid://dqxtkum5ry7ii" path="res://Sprites/Backgrounds/main menu.PNG" id="2_lka1q"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4j2x")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1577.0
offset_bottom = 898.0
scale = Vector2(0.730628, 0.721602)

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_lka1q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -33.0
offset_right = 250.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1 - Tutorial
"

[node name="Level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 2
"

[node name="Level3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 3
"

[node name="Level4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 4
"

[node name="Level5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 5
"

[node name="Bonus" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Bonus - do it if your pro
"

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="VBoxContainer/Bonus" to="." method="_on_bonus_pressed"]
